# win-theme-toggle

./: README.md
mini/: Cargo.toml
mini/.cargo/: config.toml
mini/src/: main.rs
standard/: Cargo.toml
standard/.cargo/: config.toml
standard/src/: main.rs
